update: 修改了边界值计算，支持大部分情况